[package]
name = "logistic_regression_linfa"
version = "0.1.0"
authors = ["rugg2 <romain.guion@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
linfa = {version = "0.3.1", features=["openblas-system"]}
linfa-logistic = "0.3.1"
ndarray={version="0.13", default-features=false}
ndarray-csv = "0.4"
csv = "1.1"
plotlib = "0.5.1"